# aura

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHALLENGE.md  CITATION.cff  CONTRIBUTING.md  CRITIQUE_CLOSURE.md  Dockerfile  HOW_IT_WORKS.md  INSTALL.md  LICENSE  Makefile  OWNERSHIP.md  README.md  ROADMAP.md  TESTING.md  WHITEPAPER_CONSCIOUSNESS_EXPANSION.md  aura_architecture.txt  aura_chat_stack.txt  aura_cleanup.py  aura_deep_qa_report.md  aura_main.py  build_launcher.sh  check_nethack_registration.py  com.aura.cognitive.daemon.plist  compile_arch.sh  compile_full_arch.sh  docker-compose.yml  enterprise_gate_report.json  export_aura.py  export_source.sh  fix_all.py  fix_all_write_text.py  fix_remaining.py  fix_scripts_exact.py  fix_write_text.py  flagship_readiness_all_output.txt  flagship_readiness_all_output2.txt  flagship_readiness_core_output.txt  flagship_readiness_core_output2.txt  (+35 more)
.github/: TOPICS.md
archive/: device_discovery.py  emotion_engine.py  reality_grounding.py  screen_observer.py  self_healer.py  test_auto_continue.py  test_gemini.py  test_main.py  test_mlx_vlm.py
artifacts/: aura_live_skill_probe_2026-04-21.json  dev_canary_trace.jsonl  latest_canary_trace.jsonl  test_nethack_kernel_trace.jsonl  verification_2026-04-21.md
audit/: aura_critical_source_compilation.txt
aura_bench/: __init__.py  runner.py
aura_main/: _aura_run.py
benchmarks/: long_horizon_stress.py
challenges/: nethack_challenge.py  nethack_challenge_simple.py
cloud/: _write_retry_script.py  oci_launch.py  oci_launch_multiregion.py
config/: aura_enterprise_gate_baseline.json  llm_depths.yaml
core/: agency_bus.py  agency_core.py  api_adapter.py  app_context.py  apply_response_patches.py  audit.py  audit_logger.py  aura_3_boot.py  autonomous_initiative_loop.py  autonomy_guardian.py  backup.py  base_module.py  behavior_controller.py  belief_challenger.py  belief_revision.py  biography.py  brain_integration.py  capabilities.py  capabilities_manifest.json  capability_engine.py  capability_map.py  circuit_breaker.py  code_refiner.py  cognitive_integration.py  cognitive_integration_layer.py  cognitive_integration_patch.py  cognitive_kernel.py  cognitive_loop.py  concept_linker.py  config.py  config_paths.py  constitution.py  constitutional_alignment.py  container.py  context_manager.py  continuity.py  continuous_cognition.py  continuous_learning.py  conversation_loop.py  conversation_reflection.py  (+139 more)
demos/: substrate_voice_demo.md
docker/: Dockerfile
docs/: AURA_AGRADE_GAP_REGISTER.md  AURA_CLOSURE_PATCH_02.md  AURA_EXECUTION_PLAN.md  AURA_EXECUTION_TRACKER.md  AURA_PROMPT_COVERAGE_AUDIT.md  AURA_RISK_REGISTER.md  AURA_TEST_COMMANDS.md  AUTONOMOUS_ARCHITECTURE_GOVERNOR.md  BEHAVIORAL_PROOF_STANDARD.md  DATA_RETENTION_DELETION_POLICY.md  ENTERPRISE_ZERO_NOTES_STANDARD.md  FLAGSHIP_CLOSURE_PATCH_04.md  FLAGSHIP_CLOSURE_PATCH_05.md  (+21 more)
native/aura-shell/: Cargo.toml  tauri.conf.json
native/aura-shell/src/: main.rs
rust_extensions/aura_m1_ext/: Cargo.toml
rust_extensions/aura_m1_ext/src/: lib.rs
(+2581 files in other folders)
