[project]
name = "aura-zenith"
version = "2026.3.1"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "mlx-lm==0.31.0",                    # March 7 2026: tensor parallelism
    "mlx>=0.22.0",
    "structlog>=25.1.0",
    "pybreaker>=1.1.0",
    "faiss-cpu>=1.10.0",                 # unified memory friendly
    "httpx>=0.28.0",
    "aiosqlite>=0.20.0",
    "prometheus-client>=0.21.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "psutil>=6.1.1",
    "pydantic-settings>=2.7.0",
    "pyobjc-framework-Cocoa>=11.0",
    "py2app>=0.28.0",                    # macOS app bundle
    "tenacity>=8.5.0",
    "sqlalchemy>=2.0.35",
    "celery>=5.4.0",
    "redis>=5.1.0",
    "playwright>=1.42.0",
    "TTS>=0.22.0",
    "pyttsx3>=2.90",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "pre-commit>=3.8.0",
    "ruff>=0.5.0",
    "mypy>=1.11.2",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "ASYNC"]
ignore = ["E501"] # Line length let ruff-format handle

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
warn_unused_ignores = true

[tool.maturin]
bindings = "pyo3"
manifest-path = "rust_extensions/aura_m1_ext/Cargo.toml"
features = ["universal2"]  # M1 Pro native + Rosetta fallback

[tool.bandit]
exclude_dirs = ["tests", "scripts", "research", "archive", ".venv"]
skips = ["B101", "B311"]  # B101=assert, B311=random (used intentionally for non-crypto)

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks full-pipeline integration tests",
    "stress: marks load/stress tests",
    "online: test requires live internet access (skip with '-m \"not online\"')",
]
