[package]
name = "aura-shell"
version = "0.1.0"
description = "Native shell for Aura — wraps the local web UI in a signed app."
edition = "2021"
rust-version = "1.78"
authors = ["Aura"]
license = "Apache-2.0"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]
